--- a/app/index.html
+++ b/app/index.html
@@ -1,13 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.min.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>gulp bimba</title>
-</head>
-<header><h1>Header</h1></header>
-<main><h2>bomba</h2></main>
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="stylesheet" href="css/style.min.css" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Red+Rose:wght@300..700&display=swap"
+            rel="stylesheet"
+        />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Red+Rose:wght@300..700&display=swap"
+            rel="stylesheet"
+        />
+        <title>Cosmologik</title>
+    </head>
+    <header class="header">
+        <div class="container">
+            <div class="header__wrapper">
+                <div class="header__logo">
+                    <h3 class="header__logo-title unselectable">Cosmologik</h3>
+                </div>
+                <div class="header__burger">
+                    <button class="header__burger-btn">
+                        <img src="/images/src/icons/burger.svg" alt="menu" />
+                    </button>
+                </div>
+                <div class="header__menu">
+                    <div class="header__menu-close">
+                        <h6 class="header__menu-title">Ближний космос</h6>
+                        <ul class="header__menu-list">
+                            <li class="header__menu-item">
+                                <a href="#" class="header__menu-link">
+                                    Солнечная система
+                                </a>
+                            </li>
+                            <li class="header__menu-item">
+                                <a href="#" class="header__menu-link"
+                                    >Планеты</a
+                                >
+                            </li>
+                            <li class="header__menu-item">
+                                <a href="#" class="header__menu-link"
+                                    >Спутники</a
+                                >
+                            </li>
+                            <li class="header__menu-item">
+                                <a href="#" class="header__menu-link">Кометы</a>
+                            </li>
+                            <li class="header__menu-item">
+                                <a href="#" class="header__menu-link"
+                                    >Метеориты</a
+                                >
+                            </li>
+                            <li class="header__menu-item">
+                                <a href="#" class="header__menu-link"
+                                    >Астероиды</a
+                                >
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="header__menu-far">
+                        <h6 class="header__menu-title">Далёкий космос</h6>
+                        <ul class="header__menu-list">
+                            <li class="header__menu-item">
+                                <a href="#" class="header__menu-link">Звёзды</a>
+                            </li>
+                            <li class="header__menu-item">
+                                <a href="#" class="header__menu-link"
+                                    >Созвездия</a
+                                >
+                            </li>
+                            <li class="header__menu-item">
+                                <a href="#" class="header__menu-link"
+                                    >Черные дыры</a
+                                >
+                            </li>
+                            <li class="header__menu-item">
+                                <a href="#" class="header__menu-link"
+                                    >Вселенная</a
+                                >
+                            </li>
+                            <li class="header__menu-item">
+                                <a href="#" class="header__menu-link"
+                                    >Галактика</a
+                                >
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="header__menu-social">
+                        <h6 class="header__menu-title">Мы в соц.сетях:</h6>
+                        <ul class="header__social-list">
+                            <li class="header__social-item">
+                                <a href="#" class="header__social-link">
+                                    <img
+                                        src="images/src/icons/social/vk.svg"
+                                        alt="social_img"
+                                        class="header__social-img"
+                                    />
+                                </a>
+                            </li>
+                            <li class="header__social-item">
+                                <a href="#" class="header__social-link">
+                                    <img
+                                        src="images/src/icons/social/telegram.svg"
+                                        alt="social_img"
+                                        class="header__social-img"
+                                    />
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+</html>
+
+<main class="main">
+    <section class="hello">
+        <div class="container">
+            <div class="hello__wrapper">
+                <div class="hello__cosmonaut">
+                    <img
+                        src="/images/astronaut.png"
+                        alt="cosmonaut"
+                        class="hello__image"
+                    />
+                </div>
+                <div class="hello__info">
+                    <h1 class="hello__info-title">
+                        Привет,<br />
+                        я - Космологик
+                    </h1>
+                    <p class="hello__info-text">
+                        Помогу, расскажу и поделимся самыми свежими знаниями
+                        школьной программы
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="know"></section>
+</main>
+
 <body>
     <h1>Hello footer</h1>
     <script src="js/main.js"></script>
