knowlege section 50% is done

--- a/app/index.html
+++ b/app/index.html
@@ -142,7 +142,141 @@
             </div>
         </div>
     </section>
-    <section class="know"></section>
+    <section class="know">
+        <div class="container">
+            <div class="know__info">
+                <h1 class="know__info-title">А знаете ли вы..</h1>
+                <p class="know__info-text">
+                    Выберите рубрику, чтобы узнать больше
+                </p>
+            </div>
+            <div class="know__cards">
+                <div class="know__card">
+                    <a href="#" class="know__card-link">
+                        <img
+                            src="/images/src/cards/galaxy.svg"
+                            alt="card_img"
+                            class="know__card-image"
+                        />
+                        <span class="know__card-text">Вселенная</span>
+                    </a>
+                </div>
+                <div class="know__card">
+                    <a href="#" class="know__card-link">
+                        <img
+                            src="/images/src/cards/planets.svg"
+                            alt="card_img"
+                            class="know__card-image"
+                        />
+                        <span class="know__card-text">Планеты</span>
+                    </a>
+                </div>
+                <div class="know__card">
+                    <a href="#" class="know__card-link">
+                        <img
+                            src="/images/src/cards/sun.svg"
+                            alt="card_img"
+                            class="know__card-image"
+                        />
+                        <span class="know__card-text">Звезды</span>
+                    </a>
+                </div>
+                <div class="know__card">
+                    <a href="#" class="know__card-link">
+                        <img
+                            src="/images/src/cards/space-station.svg"
+                            alt="card_img"
+                            class="know__card-image"
+                        />
+                        <span class="know__card-text">Космические cтанции</span>
+                    </a>
+                </div>
+                <div class="know__card">
+                    <a href="#" class="know__card-link">
+                        <img
+                            src="/images/src/cards/solar-system.svg"
+                            alt="card_img"
+                            class="know__card-image"
+                        />
+                        <span class="know__card-text">Солнечная система</span>
+                    </a>
+                </div>
+                <div class="know__card">
+                    <a href="#" class="know__card-link">
+                        <img
+                            src="/images/src/cards/asteroid (4).svg"
+                            alt="card_img"
+                            class="know__card-image"
+                        />
+                        <span class="know__card-text">Астероиды</span>
+                    </a>
+                </div>
+                <div class="know__card">
+                    <a href="#" class="know__card-link">
+                        <img
+                            src="/images/src/cards/space-station.svg"
+                            alt="card_img"
+                            class="know__card-image"
+                        />
+                        <span class="know__card-text">Спутники</span>
+                    </a>
+                </div>
+                <div class="know__card">
+                    <a href="#" class="know__card-link">
+                        <img
+                            src="/images/src/cards/comet.svg"
+                            alt="card_img"
+                            class="know__card-image"
+                        />
+                        <span class="know__card-text">Комета</span>
+                    </a>
+                </div>
+                <div class="know__card">
+                    <a href="#" class="know__card-link">
+                        <img
+                            src="/images/src/cards/meteorite.svg"
+                            alt="card_img"
+                            class="know__card-image"
+                        />
+                        <span class="know__card-text">Метеориты</span>
+                    </a>
+                </div>
+                <div class="know__card">
+                    <a href="#" class="know__card-link">
+                        <img
+                            src="/images/src/cards/galaxy (1).svg"
+                            alt="card_img"
+                            class="know__card-image"
+                        />
+                        <span class="know__card-text">Галактика</span>
+                    </a>
+                </div>
+                <div class="know__card">
+                    <a href="#" class="know__card-link">
+                        <img
+                            src="/images/src/cards/constellation (1).svg"
+                            alt="card_img"
+                            class="know__card-image"
+                        />
+                        <span class="know__card-text">Созвездия</span>
+                    </a>
+                </div>
+                <div class="know__card">
+                    <a href="#" class="know__card-link">
+                        <img
+                            src="/images/src/cards/black-hole.svg"
+                            alt="card_img"
+                            class="know__card-image"
+                        />
+                        <span class="know__card-text">Черные дыры</span>
+                    </a>
+                </div>
+            </div>
+            <p class="know__description">
+                Самое интересное и познавательное от космологиков
+            </p>
+        </div>
+    </section>
 </main>
 
 <body>
