start conclusion section

--- a/app/asteroids.html
+++ b/app/asteroids.html
@@ -190,6 +190,204 @@
     </div>
 </div>
 
+<div class="main-content">
+    <div class="container">
+        <div class="main-content__wrapper">
+            <h2 class="main-content__title">Заголовок второго уровня</h2>
+            <p class="main-content__text">
+                <span>Астеро́ид</span> (распространённый до 2006 года
+                синоним — малая планета)  — относительно небольшое небесное
+                тело Солнечной системы, движущееся по орбите вокруг Солнца.
+                Астероиды значительно уступают по массе и размерам планетам,
+                имеют неправильную форму и не имеют атмосферы, хотя при этом и у
+                них могут быть спутники. Входят в категорию малых тел Солнечной
+                системы.
+            </p>
+            <div class="tabel-list">
+                <p class="tabel-list__title">Список астероидов:</p>
+                <div class="tabel-list__wrapper">
+                    <ul class="tabel-list__list">
+                        <li class="tabel-list__item">Церера</li>
+                        <li class="tabel-list__item">Паллада</li>
+                        <li class="tabel-list__item">Юнона</li>
+                        <li class="tabel-list__item">Веста</li>
+                        <li class="tabel-list__item">Астрея</li>
+                        <li class="tabel-list__item">Геба</li>
+                        <li class="tabel-list__item">Флора</li>
+                        <li class="tabel-list__item">Метида</li>
+                    </ul>
+                    <ul class="tabel-list__list">
+                        <li class="tabel-list__item">Эгерия</li>
+                        <li class="tabel-list__item">Ирена</li>
+                        <li class="tabel-list__item">Эвномия</li>
+                        <li class="tabel-list__item">Психея</li>
+                        <li class="tabel-list__item">Фетида</li>
+                        <li class="tabel-list__item">Мельпомена</li>
+                        <li class="tabel-list__item">Гигея</li>
+                        <li class="tabel-list__item">Парфенопа</li>
+                    </ul>
+                    <ul class="tabel-list__list">
+                        <li class="tabel-list__item">Фокея</li>
+                        <li class="tabel-list__item">Прозерпина</li>
+                        <li class="tabel-list__item">Эвтерпа</li>
+                        <li class="tabel-list__item">Беллона</li>
+                        <li class="tabel-list__item">Амфитрита</li>
+                        <li class="tabel-list__item">Урания</li>
+                        <li class="tabel-list__item">Виктория</li>
+                        <li class="tabel-list__item">Ирида</li>
+                    </ul>
+                    <ul class="tabel-list__list">
+                        <li class="tabel-list__item">Фортуна</li>
+                        <li class="tabel-list__item">Массалия</li>
+                        <li class="tabel-list__item">Лютеция</li>
+                        <li class="tabel-list__item">Каллиопа</li>
+                        <li class="tabel-list__item">Талия</li>
+                        <li class="tabel-list__item">Фемида</li>
+                    </ul>
+                </div>
+            </div>
+            <h2 class="main-content__title">Опасность астероидов</h2>
+            <p class="main-content__text">
+                Несмотря на то, что Земля значительно больше всех известных
+                астероидов, столкновение с телом размером более 3 км может
+                привести к уничтожению цивилизации. Столкновение с телом
+                меньшего размера (но более 50 метров в диаметре) может привести
+                к многочисленным жертвам и гигантскому экономическому ущербу.Чем
+                больше и тяжелее астероид, тем большую опасность он
+                представляет, однако и обнаружить его в этом случае гораздо
+                легче. Наиболее опасным на данный момент считается
+                астероид Апофис, диаметром около 300 м, при столкновении с
+                которым может быть уничтожена целая страна.
+            </p>
+            <p class="main-content__title-min">
+                Оценки последствий падения астероидов
+            </p>
+            <div class="main-content__grey-bg"></div>
+        </div>
+    </div>
+</div>
+<div class="conclusion">
+    <div class="container">
+        <div class="main-content__wrapper">
+            <h2 class="main-content__title">Заключение</h2>
+            <div class="conclusion__inference">
+                <p class="conclusion__inference-text">
+                    Из этой статьи мы узнали amet et delectus accommodare his
+                    consul copiosae legendos at vix ad putent delectus delicata
+                    usu. Vidit dissentiet eos cu eum an brute copiosae
+                    hendrerit. Eos erant dolorum an. Per facer affert ut. Mei
+                    iisque mentitum moderatius cu. Sit munere facilis accusam eu
+                    dicat falli consulatu at vis.
+                </p>
+            </div>
+            <div class="conclusion__share">
+                <p class="conclusion__share-title">
+                    Поделитесь это страницей с друзьями:
+                </p>
+                <ul class="conclusion__share-list">
+                    <li class="conclusion__share-item">
+                        <a href="#" class="conclusion__share-link"
+                            ><img
+                                src="images/src/icons/social/vk.svg"
+                                alt=""
+                                class="conclusion__share-img"
+                        /></a>
+                    </li>
+                    <li class="conclusion__share-item">
+                        <a href="#" class="conclusion__share-link"
+                            ><img
+                                src="images/src/icons/social/vk.svg"
+                                alt=""
+                                class="conclusion__share-img"
+                        /></a>
+                    </li>
+                    <li class="conclusion__share-item">
+                        <a href="#" class="conclusion__share-link"
+                            ><img
+                                src="images/src/icons/social/vk.svg"
+                                alt=""
+                                class="conclusion__share-img"
+                        /></a>
+                    </li>
+                    <li class="conclusion__share-item">
+                        <a href="#" class="conclusion__share-link"
+                            ><img
+                                src="images/src/icons/social/vk.svg"
+                                alt=""
+                                class="conclusion__share-img"
+                        /></a>
+                    </li>
+                    <li class="conclusion__share-item">
+                        <a href="#" class="conclusion__share-link"
+                            ><img
+                                src="images/src/icons/social/vk.svg"
+                                alt=""
+                                class="conclusion__share-img"
+                        /></a>
+                    </li>
+                    <li class="conclusion__share-item">
+                        <a href="#" class="conclusion__share-link"
+                            ><img
+                                src="images/src/icons/social/vk.svg"
+                                alt=""
+                                class="conclusion__share-img"
+                        /></a>
+                    </li>
+                </ul>
+            </div>
+            <div class="conclusion__like">
+                <h6 class="conclusion__like-title">
+                    Понравилась ли вам наша статья?
+                </h6>
+                <p class="conclusion__like-text">
+                    Поставьте оценку и напишите ваш комментарий.
+                </p>
+                <div class="conclusion__like-rate">
+                    <ul class="conclusion__like-stars">
+                        <li class="conclusion__like-star">
+                            <img
+                                src=""
+                                alt="star"
+                                class="conclusion__like-img"
+                            />
+                        </li>
+                        <li class="conclusion__like-star">
+                            <img
+                                src=""
+                                alt="star"
+                                class="conclusion__like-img"
+                            />
+                        </li>
+                        <li class="conclusion__like-star">
+                            <img
+                                src=""
+                                alt="star"
+                                class="conclusion__like-img"
+                            />
+                        </li>
+                        <li class="conclusion__like-star">
+                            <img
+                                src=""
+                                alt="star"
+                                class="conclusion__like-img"
+                            />
+                        </li>
+                        <li class="conclusion__like-star">
+                            <img
+                                src=""
+                                alt="star"
+                                class="conclusion__like-img"
+                            />
+                        </li>
+                    </ul>
+                    <span class="conclusion__like-digits">4.1 / 5</span>
+                    <span class="conclusion__like-votes"> (36 голосов)</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 
     <footer class="footer">
         <div class="container">
