start elemnt conclusion 50% is done

--- a/app/about.html
+++ b/app/about.html
@@ -14,6 +14,7 @@
             href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Red+Rose:wght@300..700&display=swap"
             rel="stylesheet"
         />
+        <script src="https://kit.fontawesome.com/90e3df6b25.js" crossorigin="anonymous"></script>
         <title>Cosmologik</title>
     </head>
     <body>
