--- a/app/asteroids.html
+++ b/app/asteroids.html
@@ -14,6 +14,7 @@
             href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Red+Rose:wght@300..700&display=swap"
             rel="stylesheet"
         />
+        <script src="https://kit.fontawesome.com/90e3df6b25.js" crossorigin="anonymous"></script>
         <title>Cosmologik</title>
     </head>
     <body>
@@ -343,7 +344,7 @@
                     Поставьте оценку и напишите ваш комментарий.
                 </p>
                 <div class="conclusion__like-rate">
-                    <ul class="conclusion__like-stars">
+                    <!-- <ul class="conclusion__like-stars">
                         <li class="conclusion__like-star">
                             <img
                                 src=""
@@ -379,10 +380,102 @@
                                 class="conclusion__like-img"
                             />
                         </li>
-                    </ul>
+                    </ul> -->
+                    <div class="conclusion__like-stars">
+                        <div class="conclusion__star-box">
+                            <i
+                                class="fa-solid fa-star checked"
+                                data-rate="1"
+                            ></i>
+                            <i
+                                class="fa-solid fa-star checked"
+                                data-rate="2"
+                            ></i>
+                            <i class="fa-regular fa-star" data-rate="3"></i>
+                            <i class="fa-regular fa-star" data-rate="4"></i>
+                            <i class="fa-regular fa-star" data-rate="5"></i>
+                        </div>
+                    </div>
                     <span class="conclusion__like-digits">4.1 / 5</span>
                     <span class="conclusion__like-votes"> (36 голосов)</span>
                 </div>
+            </div>
+            <div class="conclusion__recomendation">
+                <h2 class="main-content__title">Рекомендуем посмотреть</h2>
+                <p class="conclusion__recomendation-text">
+                    Полезные статьи о планете Меркурий:
+                </p>
+                <div class="conclusion__recomendation-more">
+                    <div class="conclusion__recomendation-list">
+                        <div class="conclusion__recomendation-item">
+                            <img
+                                src="images/sun.jpg"
+                                alt="prewie"
+                                class="conclusion__recomendation-img"
+                            />
+                            <div class="conclusion__recomendation-info">
+                                <span class="conclusion__recomendation-time"
+                                    >23 августа &bull; 10 минут</span
+                                >
+                                <p class="conclusion__recomendation-title">
+                                    На Солнце произошла мощная вспышка для
+                                    примера более длинное название материала
+                                </p>
+                            </div>
+                        </div>
+                        <div class="conclusion__recomendation-item">
+                            <img
+                                src="images/sun.jpg"
+                                alt="prewie"
+                                class="conclusion__recomendation-img"
+                            />
+                            <div class="conclusion__recomendation-info">
+                                <span class="conclusion__recomendation-time"
+                                    >23 августа &bull; 10 минут</span
+                                >
+                                <p class="conclusion__recomendation-title">
+                                    На Солнце произошла мощная вспышка для
+                                    примера более длинное название материала
+                                </p>
+                            </div>
+                        </div>
+                        <div class="conclusion__recomendation-item">
+                            <img
+                                src="images/sun.jpg"
+                                alt="prewie"
+                                class="conclusion__recomendation-img"
+                            />
+                            <div class="conclusion__recomendation-info">
+                                <span class="conclusion__recomendation-time"
+                                    >23 августа &bull; 10 минут</span
+                                >
+                                <p class="conclusion__recomendation-title">
+                                    На Солнце произошла мощная вспышка для
+                                    примера более длинное название материала
+                                </p>
+                            </div>
+                        </div>
+                        <div class="conclusion__recomendation-item">
+                            <img
+                                src="images/sun.jpg"
+                                alt="prewie"
+                                class="conclusion__recomendation-img"
+                            />
+                            <div class="conclusion__recomendation-info">
+                                <span class="conclusion__recomendation-time"
+                                    >23 августа &bull; 10 минут</span
+                                >
+                                <p class="conclusion__recomendation-title">
+                                    На Солнце произошла мощная вспышка для
+                                    примера более длинное название материала
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="conclusion__widget">
+                <span class="conclusion__widget-text"> Виджет ВК </span>
             </div>
         </div>
     </div>
