page mercury is done

--- a/app/about.html
+++ b/app/about.html
@@ -2,8 +2,6 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="stylesheet" href="css/style.min.css" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -14,6 +12,12 @@
             href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Red+Rose:wght@300..700&display=swap"
             rel="stylesheet"
         />
+        <link
+            rel="stylesheet"
+            href="https://unpkg.com/simplebar@latest/dist/simplebar.css"
+        />
+        <link rel="stylesheet" href="css/style.min.css" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script src="https://kit.fontawesome.com/90e3df6b25.js" crossorigin="anonymous"></script>
         <title>Cosmologik</title>
     </head>
@@ -311,6 +315,7 @@
             </div>
         </div>
     </footer>
+    <script src="js/simplebar.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
