page constellation is done

--- a/app/pages/stars.html
+++ b/app/pages/stars.html
@@ -36,10 +36,8 @@
                 параметры, как радиус, масса и светимость, у разных звёзд могут
                 отличаться на порядки.
             </p>
-            <div class="tabel-list">
-                <p class="tabel-list__title tabel-list__title--orange">
-                    Список ближайших звёзд:
-                </p>
+            <div class="tabel-list tabel-list--orange">
+                <p class="tabel-list__title">Список ближайших звёзд:</p>
                 <div class="tabel-list__wrapper">
                     <ul class="tabel-list__list">
                         <li class="tabel-list__item">Церера</li>
