--- a/app/constellations.html
+++ b/app/constellations.html
@@ -135,7 +135,7 @@
                 </a>
             </li>
             <li class="breadcrumbs__item breadcrumbs__item--active">
-                <a href="#" class="breadcrumbs__item-link"> Звёзды</a>
+                <a href="#" class="breadcrumbs__item-link"> Созвездия</a>
             </li>
         </ul>
     </div>
@@ -143,7 +143,7 @@
 <div class="main-head">
     <div class="container">
         <h1 class="main-head__title">
-            Звёзды как будет выглядеть заголовок первого уровня для категории
+            Созвездия для супер заголовка первого уровня, который помогает
         </h1>
     </div>
 </div>
@@ -200,28 +200,38 @@
         <div class="main-content__wrapper">
             <h2 class="main-content__title">Заголовок второго уровня</h2>
             <p class="main-content__text">
-                <span>Звезда́</span> — массивное самосветящееся небесное тело,
-                состоящее из газа и плазмы, в котором происходят, происходили
-                или будут происходить термоядерные реакции. Ближайшей
-                к Земле звездой является Солнце, другие звёзды на ночном
-                небе выглядят как точки различной яркости, сохраняющие своё
-                взаимное расположение.<br /><br />
-                Звёзды различаются структурой и химическим составом, а такие
-                параметры, как радиус, масса и светимость, у разных звёзд могут
-                отличаться на порядки.
+                Созве́здия — в современной астрономии участки, на которые
+                разделена небесная сфера для удобства ориентирования на звёздном
+                небе.
+                <br /><br />
+                В древности созвездиями назывались характерные фигуры,
+                образуемые яркими звёздами.
             </p>
             <div class="tabel-list tabel-list--orange">
-                <p class="tabel-list__title">Список ближайших звёзд:</p>
+                <p class="tabel-list__title">
+                    Международным астрономическим союзом <br />
+                    официально признаны 88 созвездий:
+                </p>
                 <div class="tabel-list__wrapper">
                     <ul class="tabel-list__list">
-                        <li class="tabel-list__item">Церера</li>
-                        <li class="tabel-list__item">Паллада</li>
-                        <li class="tabel-list__item">Юнона</li>
-                        <li class="tabel-list__item">Веста</li>
-                        <li class="tabel-list__item">Астрея</li>
-                        <li class="tabel-list__item">Геба</li>
-                        <li class="tabel-list__item">Флора</li>
-                        <li class="tabel-list__item">Метида</li>
+                        <li class="tabel-list__item">Андромеда</li>
+                        <li class="tabel-list__item">Большая медведица</li>
+                        <li class="tabel-list__item">Большой пёс</li>
+                        <li class="tabel-list__item">Возничий</li>
+                        <li class="tabel-list__item">Волк</li>
+                        <li class="tabel-list__item">Волопас</li>
+                        <li class="tabel-list__item">Волосы Вероники</li>
+                        <li class="tabel-list__item">Геркулес</li>
+                        <li class="tabel-list__item">Гончие Псы</li>
+                        <li class="tabel-list__item">Гидры</li>
+                        <li class="tabel-list__item">Голубь</li>
+                        <li class="tabel-list__item">Дельфин</li>
+                        <li class="tabel-list__item">Дракон</li>
+                        <li class="tabel-list__item">Единорог</li>
+                        <li class="tabel-list__item">Жертвенник</li>
+                        <li class="tabel-list__item">Живописец</li>
+                        <li class="tabel-list__item">Жираф</li>
+                        <li class="tabel-list__item">Журавль</li>
                     </ul>
                     <ul class="tabel-list__list">
                         <li class="tabel-list__item">Эгерия</li>
@@ -253,212 +263,79 @@
                     </ul>
                 </div>
             </div>
-            <h2 class="main-content__title">Строение звёзд</h2>
+            <h2 class="main-content__title">Зодиакальные созвездия</h2>
             <p class="main-content__text">
-                Из наблюдений известно, что звёзды, как правило, стационарны, то
-                есть они находятся в гидростатическом и в термодинамическом
-                равновесии. Это верно и для переменных звёзд, так как чаще всего
-                их переменность представляет собой колебания параметров
-                относительно точки равновесия. Кроме того, для переноса
-                излучения должен выполняться закон сохранения энергии, так как
-                энергия вырабатывается в центральной части звезды и переносится
-                на её поверхность[1][25][26].В большинстве звёзд вещество
-                подчиняется уравнению состояния идеального газа, а значения
-                таких параметров, как температура, плотность и давление
-                вещества, увеличиваются при приближении к центру звезды:
-                например, в центре Солнца температура достигает 15,5 млн
-                кельвинов, плотность — 156 г/см3, а давление — 2⋅1016 Па[1][27].
+                Зодиакальные созвездия (от греч. ζωδιακός, «звериный») —
+                12[1] созвездий, расположенных вдоль эклиптики, видимого
+                годового пути Солнца среди звёзд. Название связано с тем, что
+                большинство зодиакальных созвездий с древних времён носит
+                названия животных.
             </p>
-            <div class="main-content__example">
-                <div
-                    class="main-content__video-bg"
-                    style="background-image: url(../images/sun-include.jpg)"
-                >
-                    <a
-                        href="https://youtu.be/j8S0F-rP9v0?si=vuO9W10JsDiR_GED"
-                        class="main-content__video-btn tube"
-                    >
-                        <img src="/images/src/icons/play.svg" alt="play" />
-                    </a>
+            <div class="main-content__zodical-list">
+                <div class="main-content__zodical-item">
+                    <a href="#" class="main-content__zodical-link">Овен</a>
                 </div>
+                <div class="main-content__zodical-item">
+                    <a href="#" class="main-content__zodical-link">Телец</a>
+                </div>
+                <div class="main-content__zodical-item">
+                    <a href="#" class="main-content__zodical-link">Близнецы</a>
+                </div>
+                <div class="main-content__zodical-item">
+                    <a href="#" class="main-content__zodical-link">Рак</a>
+                </div>
+                <div class="main-content__zodical-item">
+                    <a href="#" class="main-content__zodical-link">Лев</a>
+                </div>
+                <div class="main-content__zodical-item">
+                    <a href="#" class="main-content__zodical-link">Дева</a>
+                </div>
+                <div class="main-content__zodical-item">
+                    <a href="#" class="main-content__zodical-link">Весы</a>
+                </div>
+                <div class="main-content__zodical-item">
+                    <a href="#" class="main-content__zodical-link">Скорпион</a>
+                </div>
+                <div class="main-content__zodical-item">
+                    <a href="#" class="main-content__zodical-link">Змееносец</a>
+                </div>
+                <div class="main-content__zodical-item">
+                    <a href="#" class="main-content__zodical-link">Стрелец</a>
+                </div>
+                <div class="main-content__zodical-item">
+                    <a href="#" class="main-content__zodical-link">Козерог</a>
+                </div>
+                <div class="main-content__zodical-item">
+                    <a href="#" class="main-content__zodical-link">Водолей</a>
+                </div>
+                <div class="main-content__zodical-item">
+                    <a href="#" class="main-content__zodical-link">Рыбы</a>
+                </div>
+            </div>
+            <div class="main-content__example">
+                <div class="main-content__grey-bg"></div>
                 <p class="main-content__example-caption">
-                    Строение звезды и
+                    Пример автора и
                     <a href="#" class="main-content__example-link"
-                        >ссылка на источник</a
+                        >ссылки на источник</a
                     >
                 </p>
             </div>
-            <h2 class="main-content__title">Атмофсера звёзд</h2>
+            <h2 class="main-content__title">Заголовок второго уровня</h2>
             <p class="main-content__text">
-                Звёздная атмосфера — область, в которой формируется
-                непосредственно наблюдаемое излучение.
+                Lorem ipsum dolor sit amet et delectus accommodare his consul
+                copiosae legendos at vix ad putent delectus delicata usu. Vidit
+                dissentiet eos cu eum an brute copiosae hendrerit. Eos erant
+                dolorum an. Per facer affert ut. Mei iisque mentitum moderatius
+                cu. Sit munere facilis accusam eu dicat falli consulatu at vis.
+                Te facilisis <br /><br />
+                Lorem ipsum dolor sit amet et delectus accommodare his consul
+                copiosae legendos at vix ad putent delectus delicata usu. Vidit
+                dissentiet eos cu eum an brute copiosae hendrerit. Eos erant
+                dolorum an. Per facer affert ut. Mei iisque mentitum moderatius
+                cu. Sit munere facilis accusam eu dicat falli consulatu at vis.
+                Te facilisis
             </p>
-            <div class="main-content__definition">
-                <p class="main-content__definition-text">
-                    Фотосфера — самая нижняя, непрозрачная часть атмосферы.
-                    <br /><br />
-                    В ней формируется непрерывный спектр излучения, а сама она
-                    при наблюдениях в оптическом диапазоне выглядит как
-                    поверхность звезды. С ней же связано явление потемнения к
-                    краю, из-за которого края звезды оказываются тусклее
-                    центральных областей: например, у Солнца в видимом диапазоне
-                    края тусклее центра на 40 %. Температура фотосферы Солнца
-                    составляет 6500 K, а плотность — 5⋅10−4 кг/м3.
-                </p>
-            </div>
-            <div class="main-content__example">
-                <div
-                    class="main-content__video-bg"
-                    style="background-image: url(../images/sun-video.jpg)"
-                >
-                    <a
-                        href="https://youtu.be/j8S0F-rP9v0?si=vuO9W10JsDiR_GED"
-                        class="main-content__video-btn tube"
-                    >
-                        <img src="/images/src/icons/play.svg" alt="play" />
-                    </a>
-                </div>
-                <p class="main-content__example-caption">
-                    Фотосфера
-                    <a href="#" class="main-content__example-link"
-                        >ссылка на источник</a
-                    >
-                </p>
-            </div>
-            <div class="main-content__definition">
-                <p class="main-content__definition-text">
-                    Обращающий слой находится над фотосферой и по сравнению с
-                    ней имеет более низкую температуру и плотность. В нём
-                    образуются линии поглощения в спектре. У Солнца температура
-                    этого слоя составляет около 4500 K, а плотность — 10−7 кг/м3
-                </p>
-            </div>
-            <div class="main-content__example">
-                <div
-                    class="main-content__video-bg"
-                    style="background-image: url(../images/sun-video.jpg)"
-                >
-                    <a
-                        href="https://youtu.be/j8S0F-rP9v0?si=vuO9W10JsDiR_GED"
-                        class="main-content__video-btn tube"
-                    >
-                        <img src="/images/src/icons/play.svg" alt="play" />
-                    </a>
-                </div>
-                <p class="main-content__example-caption">
-                    Обращающий слой
-                    <a href="#" class="main-content__example-link"
-                        >ссылка на источник</a
-                    >
-                </p>
-            </div>
-            <div class="main-content__definition">
-                <p class="main-content__definition-text">
-                    Хромосфера — слой звёздной атмосферы с более высокой
-                    температурой, чем у фотосферы, который создаёт эмиссионные
-                    линии в спектре. Температура хромосферы Солнца составляет
-                    10 000 K, но её яркость в 100 раз меньше, чем у фотосферы.
-                    Этот слой отсутствует у горячих звёзд.
-                </p>
-            </div>
-            <div class="main-content__example">
-                <div
-                    class="main-content__video-bg"
-                    style="background-image: url(../images/sun-video.jpg)"
-                >
-                    <a
-                        href="https://youtu.be/j8S0F-rP9v0?si=vuO9W10JsDiR_GED"
-                        class="main-content__video-btn tube"
-                    >
-                        <img src="/images/src/icons/play.svg" alt="play" />
-                    </a>
-                </div>
-                <p class="main-content__example-caption">
-                    Хромосфера
-                    <a href="#" class="main-content__example-link"
-                        >ссылка на источник</a
-                    >
-                </p>
-            </div>
-            <div class="main-content__definition">
-                <p class="main-content__definition-text">
-                    Корона — внешний слой звёздной атмосферы с очень высокой
-                    температурой, но очень низкой плотностью и яркостью. В этой
-                    области происходит излучение преимущественно в рентгеновском
-                    диапазоне, и мощность в этом слое не превышает 10−3 общей
-                    светимости звезды; для Солнца она составляет 10−6 L⊙. Из-за
-                    низкой светимости в оптическом диапазоне корона наблюдалась
-                    только у Солнца и только во время полных солнечных затмений.
-                    Температура солнечной короны составляет 1,5 млн кельвинов,
-                    но у некоторых звёзд может достигать 10 млн K.
-                </p>
-            </div>
-            <div class="main-content__example">
-                <div
-                    class="main-content__video-bg"
-                    style="background-image: url(../images/sun-video.jpg)"
-                >
-                    <a
-                        href="https://youtu.be/j8S0F-rP9v0?si=vuO9W10JsDiR_GED"
-                        class="main-content__video-btn tube"
-                    >
-                        <img src="/images/src/icons/play.svg" alt="play" />
-                    </a>
-                </div>
-                <p class="main-content__example-caption">
-                    Корона
-                    <a href="#" class="main-content__example-link"
-                        >ссылка на источник</a
-                    >
-                </p>
-            </div>
-            <h2 class="main-content__title">Классы светимости</h2>
-            <p class="main-content__text">
-                Звёзды одного и того же спектрального класса имеют похожие
-                спектры и температуры, но могут иметь различные размеры и, как
-                следствие, светимости. Поэтому для полноты классификации
-                вводятся классы светимости, каждый из которых занимает свою
-                область диаграммы Герцшпрунга — Рассела.
-            </p>
-            <h4 class="main-content__min-title">
-                Классы светимости, от более ярких к более тусклым:
-            </h4>
-            <ul class="main-content__class-list">
-                <li class="main-content__class-item">
-                    <p class="main-content__text">I — сверхгиганты;</p>
-                </li>
-                <li class="main-content__class-item">
-                    <p class="main-content__text">Ia — яркие сверхгиганты;</p>
-                </li>
-                <li class="main-content__class-item">
-                    <p class="main-content__text">Iab — сверхгиганты;</p>
-                </li>
-                <li class="main-content__class-item">
-                    <p class="main-content__text">
-                        Ib — сверхгиганты низкой светимости;
-                    </p>
-                </li>
-                <li class="main-content__class-item">
-                    <p class="main-content__text">II — яркие гиганты;</p>
-                </li>
-                <li class="main-content__class-item">
-                    <p class="main-content__text">III — гиганты;</p>
-                </li>
-                <li class="main-content__class-item">
-                    <p class="main-content__text">IV — субгиганты;</p>
-                </li>
-                <li class="main-content__class-item">
-                    <p class="main-content__text">
-                        V — звёзды главной последовательности, иногда «карлики»;
-                    </p>
-                </li>
-                <li class="main-content__class-item">
-                    <p class="main-content__text">VI — субкарлики;</p>
-                </li>
-                <li class="main-content__class-item">
-                    <p class="main-content__text">VII — белые карлики.</p>
-                </li>
-            </ul>
         </div>
     </div>
 </div>
