--- a/app/about.html
+++ b/app/about.html
@@ -19,6 +19,10 @@
         <link rel="stylesheet" href="css/videotube.min.css" />
         <link rel="stylesheet" href="css/videotube.min.css" />
         <link rel="stylesheet" href="/css/lightgallery-bundle.min.css" />
+        <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+/>
 
         <link rel="stylesheet" href="css/style.min.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -320,7 +324,7 @@
         </div>
     </footer>
     <script src="js/lightgallery.umd.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="js/simplebar.js"></script>
     <script src="js/videotube.min.js"></script>
     <script src="js/main.js"></script>
