--- a/app/geography.html
+++ b/app/geography.html
@@ -142,192 +142,75 @@
                 </a>
             </li>
             <li class="breadcrumbs__item breadcrumbs__item--active">
-                <a href="#" class="breadcrumbs__item-link"> Созвездия</a>
+                <a href="#" class="breadcrumbs__item-link"> География</a>
             </li>
         </ul>
     </div>
 </div>
 <div class="main-head">
     <div class="container">
-        <h1 class="main-head__title">
-            Созвездия для супер заголовка первого уровня, который помогает
-        </h1>
+        <h1 class="main-head__title">География</h1>
     </div>
 </div>
-<div class="author">
-    <div class="container">
-        <div class="author__wrapper">
-            <img src="/images/author.jpg" alt="author" class="author__img" />
-            <div class="author__content">
-                <a href="#" class="author__link">Светлана Куликовская</a>
-                <p class="author__text">Автор статьи</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="article-image">
-    <div class="container">
-        <img
-            src="/images/article-bg.jpg"
-            alt="article-bg"
-            class="article-image__img"
-        />
-    </div>
-</div>
-<div class="article-date-time">
-    <div class="container">
-        <span class="article-date-time__date"> 16 апреля 2024 </span>
-        <span class="article-date-time__time"
-            ><img
-                src="/images/src/icons/timer.svg"
-                class="article-date-time__icon"
-            />Читать 5 мин</span
-        >
-    </div>
-</div>
-<div class="article-items">
-    <div class="container">
-        <div class="article-items__dropdown">
-            <button onclick="myFunction()" class="article-items__dropbtn">
-                Оглавление
-            </button>
-            <div id="myDropdown" class="article-items__dropdown-content">
-                <a href="#">Пункт первый</a>
-                <a href="#">Пункт второй</a>
-                <a href="#">Пункт третий</a>
-                <a href="#">Пункт четвертый</a>
-                <a href="#">Пункт пятый</a>
-            </div>
-        </div>
-    </div>
-</div>
-
 <div class="main-content">
     <div class="container">
         <div class="main-content__wrapper">
-            <h2 class="main-content__title">Заголовок второго уровня</h2>
-            <p class="main-content__text">
-                Созве́здия — в современной астрономии участки, на которые
-                разделена небесная сфера для удобства ориентирования на звёздном
-                небе.
-                <br /><br />
-                В древности созвездиями назывались характерные фигуры,
-                образуемые яркими звёздами.
-            </p>
-            <div class="tabel-list tabel-list--orange">
-                <p class="tabel-list__title">
-                    Международным астрономическим союзом <br />
-                    официально признаны 88 созвездий:
+            <div class="main-content__choose-class">
+                <p class="main-content__text">
+                    Lorem ipsum dolor sit amet et delectus accommodare his
+                    consul copiosae legendos at vix ad putent delectus delicata
+                    usu. Vidit dissentiet
+                    <br /><br />
+                    Выберите класс:
                 </p>
-                <div class="tabel-list__wrapper">
-                    <ul class="tabel-list__list">
-                        <li class="tabel-list__item">Андромеда</li>
-                        <li class="tabel-list__item">Большая медведица</li>
-                        <li class="tabel-list__item">Большой пёс</li>
-                        <li class="tabel-list__item">Возничий</li>
-                        <li class="tabel-list__item">Волк</li>
-                        <li class="tabel-list__item">Волопас</li>
-                        <li class="tabel-list__item">Волосы Вероники</li>
-                        <li class="tabel-list__item">Геркулес</li>
-                        <li class="tabel-list__item">Гончие Псы</li>
-                        <li class="tabel-list__item">Гидры</li>
-                        <li class="tabel-list__item">Голубь</li>
-                        <li class="tabel-list__item">Дельфин</li>
-                        <li class="tabel-list__item">Дракон</li>
-                        <li class="tabel-list__item">Единорог</li>
-                        <li class="tabel-list__item">Жертвенник</li>
-                        <li class="tabel-list__item">Живописец</li>
-                        <li class="tabel-list__item">Жираф</li>
-                        <li class="tabel-list__item">Журавль</li>
-                    </ul>
-                    <ul class="tabel-list__list">
-                        <li class="tabel-list__item">Эгерия</li>
-                        <li class="tabel-list__item">Ирена</li>
-                        <li class="tabel-list__item">Эвномия</li>
-                        <li class="tabel-list__item">Психея</li>
-                        <li class="tabel-list__item">Фетида</li>
-                        <li class="tabel-list__item">Мельпомена</li>
-                        <li class="tabel-list__item">Гигея</li>
-                        <li class="tabel-list__item">Парфенопа</li>
-                    </ul>
-                    <ul class="tabel-list__list">
-                        <li class="tabel-list__item">Фокея</li>
-                        <li class="tabel-list__item">Прозерпина</li>
-                        <li class="tabel-list__item">Эвтерпа</li>
-                        <li class="tabel-list__item">Беллона</li>
-                        <li class="tabel-list__item">Амфитрита</li>
-                        <li class="tabel-list__item">Урания</li>
-                        <li class="tabel-list__item">Виктория</li>
-                        <li class="tabel-list__item">Ирида</li>
-                    </ul>
-                    <ul class="tabel-list__list">
-                        <li class="tabel-list__item">Фортуна</li>
-                        <li class="tabel-list__item">Массалия</li>
-                        <li class="tabel-list__item">Лютеция</li>
-                        <li class="tabel-list__item">Каллиопа</li>
-                        <li class="tabel-list__item">Талия</li>
-                        <li class="tabel-list__item">Фемида</li>
-                    </ul>
+                <div
+                    class="main-content__buttons-list main-content__buttons-list--geography"
+                >
+                    <div class="main-content__buttons-item">
+                        <a
+                            href="geography_5.html"
+                            class="main-content__buttons-link"
+                            >5 класс</a
+                        >
+                    </div>
+                    <div class="main-content__buttons-item">
+                        <a href="#" class="main-content__buttons-link"
+                            >6 класс</a
+                        >
+                    </div>
+                    <div class="main-content__buttons-item">
+                        <a href="#" class="main-content__buttons-link"
+                            >7 класс</a
+                        >
+                    </div>
+                    <div class="main-content__buttons-item">
+                        <a href="#" class="main-content__buttons-link"
+                            >8 класс</a
+                        >
+                    </div>
+                    <div class="main-content__buttons-item">
+                        <a href="#" class="main-content__buttons-link"
+                            >9 класс</a
+                        >
+                    </div>
+                    <div class="main-content__buttons-item">
+                        <a href="#" class="main-content__buttons-link"
+                            >9 класс</a
+                        >
+                    </div>
+                    <div class="main-content__buttons-item">
+                        <a href="#" class="main-content__buttons-link"
+                            >10 класс</a
+                        >
+                    </div>
+                    <div class="main-content__buttons-item">
+                        <a href="#" class="main-content__buttons-link"
+                            >11 класс</a
+                        >
+                    </div>
                 </div>
             </div>
-            <h2 class="main-content__title">Зодиакальные созвездия</h2>
-            <p class="main-content__text">
-                Зодиакальные созвездия (от греч. ζωδιακός, «звериный») —
-                12[1] созвездий, расположенных вдоль эклиптики, видимого
-                годового пути Солнца среди звёзд. Название связано с тем, что
-                большинство зодиакальных созвездий с древних времён носит
-                названия животных.
-            </p>
-            <div class="main-content__buttons-list">
-                <div class="main-content__buttons-item">
-                    <a href="#" class="main-content__buttons-link">Овен</a>
-                </div>
-                <div class="main-content__buttons-item">
-                    <a href="#" class="main-content__buttons-link">Телец</a>
-                </div>
-                <div class="main-content__buttons-item">
-                    <a href="#" class="main-content__buttons-link">Близнецы</a>
-                </div>
-                <div class="main-content__buttons-item">
-                    <a href="#" class="main-content__buttons-link">Рак</a>
-                </div>
-                <div class="main-content__buttons-item">
-                    <a href="#" class="main-content__buttons-link">Лев</a>
-                </div>
-                <div class="main-content__buttons-item">
-                    <a href="#" class="main-content__buttons-link">Дева</a>
-                </div>
-                <div class="main-content__buttons-item">
-                    <a href="#" class="main-content__buttons-link">Весы</a>
-                </div>
-                <div class="main-content__buttons-item">
-                    <a href="#" class="main-content__buttons-link">Скорпион</a>
-                </div>
-                <div class="main-content__buttons-item">
-                    <a href="#" class="main-content__buttons-link">Змееносец</a>
-                </div>
-                <div class="main-content__buttons-item">
-                    <a href="#" class="main-content__buttons-link">Стрелец</a>
-                </div>
-                <div class="main-content__buttons-item">
-                    <a href="#" class="main-content__buttons-link">Козерог</a>
-                </div>
-                <div class="main-content__buttons-item">
-                    <a href="#" class="main-content__buttons-link">Водолей</a>
-                </div>
-                <div class="main-content__buttons-item">
-                    <a href="#" class="main-content__buttons-link">Рыбы</a>
-                </div>
-            </div>
-            <div class="main-content__example">
-                <div class="main-content__grey-bg"></div>
-                <p class="main-content__example-caption">
-                    Пример автора и
-                    <a href="#" class="main-content__example-link"
-                        >ссылки на источник</a
-                    >
-                </p>
-            </div>
+
             <h2 class="main-content__title">Заголовок второго уровня</h2>
             <p class="main-content__text">
                 Lorem ipsum dolor sit amet et delectus accommodare his consul
@@ -335,13 +218,8 @@
                 dissentiet eos cu eum an brute copiosae hendrerit. Eos erant
                 dolorum an. Per facer affert ut. Mei iisque mentitum moderatius
                 cu. Sit munere facilis accusam eu dicat falli consulatu at vis.
-                Te facilisis <br /><br />
-                Lorem ipsum dolor sit amet et delectus accommodare his consul
-                copiosae legendos at vix ad putent delectus delicata usu. Vidit
-                dissentiet eos cu eum an brute copiosae hendrerit. Eos erant
-                dolorum an. Per facer affert ut. Mei iisque mentitum moderatius
-                cu. Sit munere facilis accusam eu dicat falli consulatu at vis.
-                Te facilisis
+                Te facilisis mnesarchum qui posse omnium mediocritatem est cu.
+                Modus argumentum ne qui tation efficiendi in eos. Ei
             </p>
         </div>
     </div>
