adaptive for index.html is done

--- a/app/solar-system.html
+++ b/app/solar-system.html
@@ -677,7 +677,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="footer__menu-agree footer__menu-agree--mobile">
+                <div class="footer__menu-agree--mobile">
                     <a href="#">Соглашение на обработку персональных данных</a>
                 </div>
             </div>
