--- a/app/geography_5.html
+++ b/app/geography_5.html
@@ -977,7 +977,7 @@
 
                 </div>
 
-                <div class="footer__menu-agree footer__menu-agree--mobile">
+                <div class="footer__menu-agree--mobile">
 
                     <a href="#">Соглашение на обработку персональных данных</a>
 
