pages constellations and stars has benn adaptived

--- a/app/pages/constellations.html
+++ b/app/pages/constellations.html
@@ -35,8 +35,8 @@
             </p>
             <div class="tabel-list tabel-list--orange">
                 <p class="tabel-list__title">
-                    Международным астрономическим союзом <br />
-                    официально признаны 88 созвездий:
+                    Международным астрономическим союзом официально признаны 88
+                    созвездий:
                 </p>
                 <div class="tabel-list__wrapper">
                     <ul class="tabel-list__list">
